Arrange boxes and add buttons

--- a/index.html
+++ b/index.html
@@ -63,5 +63,10 @@
                     <p class="unlock-emoji">🔓</p>
     </section>
               </span>
+            <section class="buttons"> 
+              <button class="buttons" id="new">New Palette</button>
+              <button class="buttons" id="save">Save Palette</button>
+
+            </section>  
             </div>
             </div> 
