Add saved palettes section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 <body>
   <main> 
+   <div class="wrapper1">
     <h1>COLORANDOM</h1> 
 
 
@@ -16,9 +17,9 @@
     <section class="color-boxes-container"> 
       <div class="color-box" id="color1">
         <div class="swatch"></div>
-          <p class="box"></p>
+          <p class="box" id="box1"></p>
             <div class="box-details">
-              <p class="color-hex">#FF0000</p>
+              <p class="color-hex">#0000ff</p>
                 <span class="material-symbols-outlined" id="lock1"> 
                 <p class="unlock-emoji">🔓</p>
               </span>
@@ -26,9 +27,9 @@
           </div>
       <div class="color-box" id="color2">
         <div class="swatch"></div>
-          <p class="box"></p>
+          <p class="box" id="box2"></p>
             <div class="box-details">
-              <p class="color-hex">#00FF00</p>
+              <p class="color-hex">#ff0000</p>
                 <span class="material-symbols-outlined" id="lock2">
                   <p class="unlock-emoji">🔓</p>
               </span>
@@ -36,9 +37,9 @@
           </div> 
       <div class="color-box" id="color3">
         <div class="swatch"></div>
-          <p class="box"></p>
+          <p class="box" id="box3"></p>
             <div class="box-details">
-              <p class="color-hex">#0000FF</p>
+              <p class="color-hex">#ffff00</p>
                 <span class="material-symbols-outlined" id="lock3">
                 <p class="unlock-emoji">🔓</p>
               </span>
@@ -46,19 +47,19 @@
           </div>
       <div class="color-box" id="color4">
         <div class="swatch"></div>
-          <p class="box"></p>
+          <p class="box" id="box4"></p>
             <div class="box-details">
-              <p class="color-hex">#FFFF00</p>
-                <span class="material-symbols-outlined" ="lock4">
+              <p class="color-hex">#ffffff</p>
+                <span class="material-symbols-outlined" id="lock4">
                   <p class="unlock-emoji">🔓</p>
                 </span>
               </div>
             </div>
       <div class="color-box" id="color5">
         <div class="swatch"></div>
-          <p class="box"></p>
+          <p class="box" id="box5"></p>
             <div class="box-details">
-                <p class="color-hex">#000000</p>
+                <p class="color-hex">#ffa500</p>
                   <span class="material-symbols-outlined" id="lock5">
                     <p class="unlock-emoji">🔓</p>
     </section>
@@ -67,6 +68,18 @@
               <button class="buttons" id="new">New Palette</button>
               <button class="buttons" id="save">Save Palette</button>
 
-            </section>  
-            </div>
-            </div> 
+            </section> 
+          </div> 
+       </div>
+       <div class="wrapper2">
+       <section class="saved-pallets-section">
+          <div class="right-section">
+            <h2>Saved Palettes</h2>
+          </div>
+        </div>
+      </div>
+        </section>
+       </div>
+       </main>
+      </body>
+                 
