Feat: get random color boxes

--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
         </section>
        </div>
        </main>
+      <script src="./src/scripts.js"></script>
       </body>
-                 
+     </html>            
