--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         </section>
        </div>
        </main>
-      <script src="./src/scripts.js"></script>
+      <script src="scripts.js"></script>
+      <script src="color.js"></script>
+      <script scr="palette.js"></script>
       </body>
      </html>            
   </html>               
