Feat: random colors and matching hexcodes

--- a/index.html
+++ b/index.html
@@ -11,64 +11,18 @@
    <div class="wrapper1">
     <h1>COLORANDOM</h1>
     <section class="color-boxes-container">
-      <div class="color-box" id="color1">
-        <div class="swatch"></div>
-          <p class="box" id="box1"></p>
-            <div class="box-details">
-              <p class="color-hex">#0000FF</p>
-                <span class="material-symbols-outlined">
-                <button class="unlock-emoji"id="unlock1">🔓</button>
-                <button class="lock-emoji hidden" id="lock1">🔒</button>
-              </span>
-            </div>
-          </div>
-      <div class="color-box" id="color2">
-        <div class="swatch"></div>
-          <p class="box" id="box2"></p>
-            <div class="box-details">
-              <p class="color-hex">#FF0000</p>
-                <span class="material-symbols-outlined">
-                  <button class="unlock-emoji"id="unlock2">🔓</button>
-                  <button class="lock-emoji hidden"id="lock2">🔒</button>
-              </span>
-            </div>
-          </div>
-      <div class="color-box" id="color3">
-        <div class="swatch"></div>
-          <p class="box" id="box3"></p>
-            <div class="box-details">
-              <p class="color-hex">#FFFF00</p>
-                <span class="material-symbols-outlined">
-                <button class="unlock-emoji" id="unlock3">🔓</button>
-                <button class="lock-emoji hidden" id="lock3">🔒</button>
-              </span>
-            </div>
-          </div>
-      <div class="color-box" id="color4">
-        <div class="swatch"></div>
-          <p class="box" id="box4"></p>
-            <div class="box-details">
-              <p class="color-hex">#FFFFFF</p>
-                <span class="material-symbols-outlined">
-                  <button class="unlock-emoji" id="unlock4">🔓</button>
-                  <button class="lock-emoji hidden"id="lock4">🔒</button>
-                </span>
-              </div>
-            </div>
-      <div class="color-box" id="color5">
-        <div class="swatch"></div>
-          <p class="box" id="box5"></p>
-            <div class="box-details">
-                <p class="color-hex">#FFA500</p>
-                  <span class="material-symbols-outlined">
-                    <button class="unlock-emoji" id="unlock5">🔓</button>
-                    <button class="lock-emoji hidden" id="lock5 hidden">🔒</button>
+      <article class="box" id="box1"></article>
+      <article class="box" id="box2"></article>
+      <article class="box" id="box3"></article>
+      <article class="box" id="box4"></article>
+      <article class="box" id="box5"></article>
     </section>
-              </span>
+          <span>  
             <section class="buttons">
               <button class="buttons" id="new">New Palette</button>
               <button class="buttons" id="save">Save Palette</button>
             </section>
+          </span>
           </div>
        </div>
        <div class="wrapper2">
@@ -81,8 +35,8 @@
         </section>
        </div>
        </main>
+       <script src="palette.js"></script>
        <script src="color.js"></script>
-       <script scr="palette.js"></script>
        <script src="scripts.js"></script>
       </body>
      </html>
