Feat: saved button

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
           </div>
        </div>
        <div class="wrapper2">
-       <section class="saved-pallets-section">
+       <section class="saved-palette-section">
           <div class="right-section">
             <h2>Saved Palettes</h2>
+              <article class="savedBox" id="savedBox1"></article>
           </div>
         </div>
       </div>
