Feat: render saved palettes and save

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <section class="saved-palette-section">
           <div class="right-section">
             <h2>Saved Palettes</h2>
-              <article class="savedBox" id="savedBox1"></article>
+              <article class="saved-box" id="savedBox1"></article>
           </div>
         </div>
       </div>
