--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8" />
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
       <link href='./styles.css' rel='stylesheet'>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
       <title>ColoRandom</title>
     </head>
 <body>
@@ -19,8 +20,10 @@
     </section>
           <span>  
             <section class="buttons">
-              <button class="buttons" id="new">New Palette</button>
-              <button class="buttons" id="save">Save Palette</button>
+              <button class="glow-on-hover" id="new" type="button">N E W</button>
+              <!-- <button class="buttons" id="new">New Palette</button> -->
+              <button class="glow-on-hover" id="save" type="button">S A V E</button>
+              <!-- <button class="buttons" id="save">Save Palette</button> -->
             </section>
           </span>
           </div>
