refactor/icons_css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section class="buttons">
               <button class="glow-on-hover" id="new" type="button">NEW PALETTE</button>
               <!-- <button class="buttons" id="new">New Palette</button> -->
-              <button class="glow-on-hover" id="save" type="button">S A V E</button>
+              <button class="glow-on-hover" id="save" type="button">SAVE PALETTE</button>
               <!-- <button class="buttons" id="save">Save Palette</button> -->
             </section>
           </span>
